fix: swagger parameters name
