# src/application/services/api/config/swagger.json
@@ -356,6 +356,43 @@
             "description": "User password"
           }
         }
+      },
+      "CustomerSignUpBodySchema": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "User name"
+          },
+          "email": {
+            "type": "string",
+            "format": "email",
+            "description": "User email"
+          },
+          "password": {
+            "type": "string",
+            "format": "password",
+            "description": "User password"
+          },
+          "gender": {
+            "type": "string",
+            "pattern": "^(female|male|other|preferNotToSay)$",
+            "description": "User gender"
+          }
+        }
+      },
+      "CustomerCartItemsUpdateOrCreateBodySchema": {
+        "type": "object",
+        "properties": {
+          "cheffId": {
+            "type": "number",
+            "description": "Cheff id"
+          },
+          "quantity": {
+            "type": "number",
+            "description": "Food plate quantity"
+          }
+        }
       }
     },
     "securitySchemes": {
@@ -375,7 +412,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Admin"],
+        "tags": [
+          "Admin"
+        ],
         "responses": {
           "200": {
             "description": "All pending cheffs",
@@ -401,7 +440,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Admin"],
+        "tags": [
+          "Admin"
+        ],
         "responses": {
           "200": {
             "description": "All approved cheffs",
@@ -427,11 +468,13 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Admin"],
+        "tags": [
+          "Admin"
+        ],
         "parameters": [
           {
             "id": null,
-            "description": "Cheff id",
+            "name": "Cheff id",
             "in": "path",
             "required": true,
             "type": "number"
@@ -458,11 +501,13 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Admin"],
+        "tags": [
+          "Admin"
+        ],
         "parameters": [
           {
             "id": null,
-            "description": "Cheff id",
+            "name": "Cheff id",
             "in": "path",
             "required": true,
             "type": "number"
@@ -493,7 +538,9 @@
     "/admin/sign-in": {
       "post": {
         "description": "Sign in as admin",
-        "tags": ["Admin"],
+        "tags": [
+          "Admin"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -531,14 +578,16 @@
       }
     },
     "/admin/auth": {
-      "post": {
+      "get": {
         "description": "Authenticate as admin",
         "security": [
           {
             "bearerAuth": []
           }
         ],
-        "tags": ["Admin"],
+        "tags": [
+          "Admin"
+        ],
         "responses": {
           "200": {
             "description": "Authenticated as admin",
@@ -574,7 +623,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Cheff"],
+        "tags": [
+          "Cheff"
+        ],
         "responses": {
           "200": {
             "description": "All carts with cheff food plates",
@@ -600,7 +651,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Cheff"],
+        "tags": [
+          "Cheff"
+        ],
         "responses": {
           "200": {
             "description": "All carts with cheff food plates sent",
@@ -626,7 +679,18 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Cheff"],
+        "tags": [
+          "Cheff"
+        ],
+        "parameters": [
+          {
+            "id": null,
+            "name": "Cart id",
+            "in": "path",
+            "required": true,
+            "type": "number"
+          }
+        ],
         "responses": {
           "200": {
             "description": "Cart approved",
@@ -655,7 +719,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Cheff"],
+        "tags": [
+          "Cheff"
+        ],
         "responses": {
           "200": {
             "description": "Cart refused",
@@ -684,7 +750,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Cheff"],
+        "tags": [
+          "Cheff"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -706,7 +774,9 @@
     },
     "/cheffs/request-registration": {
       "post": {
-        "tags": ["Cheff"],
+        "tags": [
+          "Cheff"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -729,7 +799,9 @@
     "/cheffs/sign-in": {
       "post": {
         "description": "Sign in as cheff",
-        "tags": ["Cheff"],
+        "tags": [
+          "Cheff"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -750,14 +822,16 @@
       }
     },
     "/cheffs/auth": {
-      "post": {
+      "get": {
         "description": "Authenticate as cheff",
         "security": [
           {
             "bearerAuth": []
           }
         ],
-        "tags": ["Cheff"],
+        "tags": [
+          "Cheff"
+        ],
         "responses": {
           "200": {
             "description": "Authenticated as cheff",
@@ -785,15 +859,93 @@
         }
       }
     },
+    "/customers/cart-items/{id}": {
+      "put": {
+        "description": "Update or create a cart item",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "tags": [
+          "Customer"
+        ],
+        "parameters": [
+          {
+            "id": null,
+            "name": "Food plate id",
+            "in": "path",
+            "required": true,
+            "type": "number"
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CustomerCartItemsUpdateOrCreateBodySchema"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Cart item updated or created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Cart"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Food plate from another cheff"
+          },
+          "404": {
+            "description": "Food plate not found"
+          }
+        }
+      }
+    },
+    "/customers/cheffs": {
+      "get": {
+        "description": "Get all cheffs",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "tags": [
+          "Customer"
+        ],
+        "responses": {
+          "200": {
+            "description": "Cheffs found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "$ref": "#/components/schemas/Cheff"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/customers/cheffs/{id}": {
-      "patch": {
+      "get": {
         "description": "Get cheff by id",
         "security": [
           {
             "bearerAuth": []
           }
         ],
-        "tags": ["Customer"],
+        "tags": [
+          "Customer"
+        ],
         "parameters": [
           {
             "id": null,
@@ -820,10 +972,37 @@
         }
       }
     },
+    "/customers/sign-up": {
+      "post": {
+        "description": "Sign up as customer",
+        "tags": [
+          "Customer"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CustomerSignUpBodySchema"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Customer signed up"
+          },
+          "422": {
+            "description": "Email already in use"
+          }
+        }
+      }
+    },
     "/customers/sign-in": {
       "post": {
         "description": "Sign in as customer",
-        "tags": ["Customer"],
+        "tags": [
+          "Customer"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -861,14 +1040,16 @@
       }
     },
     "/customers/auth": {
-      "post": {
+      "get": {
         "description": "Authenticate as customer",
         "security": [
           {
             "bearerAuth": []
           }
         ],
-        "tags": ["Customer"],
+        "tags": [
+          "Customer"
+        ],
         "responses": {
           "200": {
             "description": "Authenticated as customer",
@@ -876,16 +1057,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "properties": {
-                    "user": {
-                      "$ref": "#/components/schemas/Customer",
-                      "description": "Customer"
-                    },
-                    "token": {
-                      "type": "string",
-                      "description": "JWT token"
-                    }
-                  }
+                  "$ref": "#/components/schemas/Customer"
                 }
               }
             }
@@ -899,7 +1071,9 @@
     "/": {
       "get": {
         "description": "GoCheff API",
-        "tags": ["Config"],
+        "tags": [
+          "Config"
+        ],
         "responses": {
           "200": {
             "description": "Returns a message with the API name"
